aiogcd (0.9.14)

  * Added ability to set offset and max results/limit. (@doubtx, issue #13)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  26 Sep 2017

aiogcd (0.9.13)

  * Fixed tabs/spaces.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  25 Sep 2017

aiogcd (0.9.12)

  * Fixed infinite loop on service account token acquiring (@doubtx, issue #12)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  25 Sep 2017

aiogcd (0.9.11)

  * Added get_parent() method to key class (@egalpin, issue #10)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  23 Jun 2017

aiogcd (0.9.10)

  * Use 'async with' for ensure_session. (@egalpin, issue #8)

  * Replace 'yield' with 'await yield_()' in asyn function. (issue #9)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  22 Jun 2017

aiogcd (0.9.9)

  * Added get_as_tuple method to Path. (@egalpin, issue #7)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.8)

  * Added DatetimeValue property. (@jomido, issue #6)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.7)

  * Added service authentication. (@jomido, issue #1)
   - rename so that PyJWT doesn't bomb ('token' is module in stdlib)
   - service account token logic
   - add top-level names
   - add a service account connector
   - add dependencies to setup.py

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.6)

  * Fixed raising an IndexError when no id/name is given. (issue #2)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.5)

  * Fixed setting the correct Kind for a model. (issue #3)

  * Fixed creating token file when a file is given without path. (issue #4)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017