@@ -1,3 +1,9 @@
+aiogcd (0.10.0)
+
+  * Implemented get_entity_by_key() as a lookup. (@egalpin, issue #14)
+
+ -- Jeroen van der Heijden <jeroen@transceptor.technology>  06 Feb 2018
+
 aiogcd (0.9.14)
 
   * Added ability to set offset and max results/limit. (@doubtx, issue #13)
